; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltUnregisterExtModuleElement.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltUnregisterExtModuleElement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsltElementsHash = common dso_local global i32* null, align 8
@xsltExtMutex = common dso_local global i32 0, align 4
@xsltFreeExtElementEntry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xsltUnregisterExtModuleElement(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** @xsltElementsHash, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %15, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %9
  %13 = load i32*, i32** %5, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %9, %2
  store i32 -1, i32* %3, align 4
  br label %27

16:                                               ; preds = %12
  %17 = load i32, i32* @xsltExtMutex, align 4
  %18 = call i32 @xmlMutexLock(i32 %17)
  %19 = load i32*, i32** @xsltElementsHash, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* @xsltFreeExtElementEntry, align 4
  %23 = call i32 @xmlHashRemoveEntry2(i32* %19, i32* %20, i32* %21, i32 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* @xsltExtMutex, align 4
  %25 = call i32 @xmlMutexUnlock(i32 %24)
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %16, %15
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @xmlMutexLock(i32) #1

declare dso_local i32 @xmlHashRemoveEntry2(i32*, i32*, i32*, i32) #1

declare dso_local i32 @xmlMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
